force-app/main/default/objects/Year_end_Review__c/fields/PL_Final_Rating__c.field-meta.xml
<CustomField>
    <fullName>PL_Final_Rating__c</fullName>
    <formula>Final_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PL Final Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>