force-app/main/default/objects/Year_end_Review__c/fields/PL_Rating_Value_Weighted__c.field-meta.xml
<CustomField>
    <fullName>PL_Rating_Value_Weighted__c</fullName>
    <formula>IF( 
OR(Job_Title__c = &quot;Associate Consultant&quot; ,Job_Title__c =  &quot;Associate Director&quot; , Job_Title__c = &quot;Director&quot;), (( AO_Performance_Lead_Value__c *0.45) + (BC_Performance_Lead_Value__c * 0.10 ) + ( DC_Performance_Lead_Value__c * 0.15) + ( Utilization_Rating__c * 0.30)), 
IF(Job_Title_Static__c = &quot;Business Analyst&quot;,(( AO_Performance_Lead_Value__c *0.75) + (BC_Performance_Lead_Value__c * 0.10 ) + ( DC_Performance_Lead_Value__c * 0.15)),
IF(OR(Job_Title__c = &quot;Senior Director&quot;, Job_Title__c = &quot;Vice President&quot;), 
 ((AO_Performance_Lead_Value__c *0.50) + (BC_Performance_Lead_Value__c * 0.15 ) + ( DC_Performance_Lead_Value__c * 0.15) + ( Utilization_Rating__c * 0.20)),
IF(Job_Title_Static__c = &quot;Executive Assistant&quot;,(( AO_Performance_Lead_Value__c *0.6) + (BC_Performance_Lead_Value__c * 0.2) + ( DC_Performance_Lead_Value__c * 0.2)), 0.00))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Rating: PL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>