force-app/main/default/objects/Year_end_Review__c/fields/Practice_Owner__c.field-meta.xml
<CustomField>
    <fullName>Practice_Owner__c</fullName>
    <formula>IF(CreatedBy.Id = &quot;005F0000005t2Sm&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Owner</label>
    <type>Checkbox</type>
</CustomField>