force-app/main/default/objects/Year_end_Review__c/fields/Previous_Evaluation_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Previous_Evaluation_Value_1__c</fullName>
    <label>2018 MY</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>