force-app/main/default/objects/Year_end_Review__c/fields/Promotion_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Recommendations__c</fullName>
    <label>Promotion Recommendations</label>
    <type>TextArea</type>
</CustomField>