force-app/main/default/objects/Year_end_Review__c/fields/Recommend_for_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Recommend_for_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend for Promotion</label>
    <type>Checkbox</type>
</CustomField>