force-app/main/default/objects/Year_end_Review__c/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks record as rejected.</description>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>