force-app/main/default/objects/Year_end_Review__c/fields/RL_Final__c.field-meta.xml
<CustomField>
    <fullName>RL_Final__c</fullName>
    <formula>IF(CreatedById = &quot;0052A000009xinW&quot;, (0.35*AO_Managing_Director_Value__c)+(0.4*BC_Managing_Director_Value__c)+(0.25*DC_Managing_Director_Value__c), 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RL Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>