force-app/main/default/objects/Year_end_Review__c/fields/RL_Self__c.field-meta.xml
<CustomField>
    <fullName>RL_Self__c</fullName>
    <formula>IF(CreatedById = &quot;0052A000009xinW&quot;, (0.35*AO_Self_Evaluation_Value__c) + (0.4*BC_Self_Evaluation_Value__c) + (0.25*DC_Self_Evaluation_Value__c) + (0.0*Utilization_Rating__c), 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RL Self</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>