force-app/main/default/objects/Year_end_Review__c/fields/SD_PO_Utilization_Rating__c.field-meta.xml
<CustomField>
    <fullName>SD_PO_Utilization_Rating__c</fullName>
    <formula>0.00</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SD PO Utilization Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>