force-app/main/default/objects/Year_end_Review__c/fields/SD_Utilization_Rating__c.field-meta.xml
<CustomField>
    <fullName>SD_Utilization_Rating__c</fullName>
    <formula>IF(AND(Job_Title_Static__c = &quot;Senior Director&quot;,  Utilization_YTD__c  &gt;= 0.95), 5, 
IF(AND(Job_Title_Static__c = &quot;Senior Director&quot;,  Utilization_YTD__c  &gt;= 0.85, Utilization_YTD__c   &lt;  0.95), 4,
IF(AND(Job_Title_Static__c = &quot;Senior Director&quot;,  Utilization_YTD__c  &gt;= 0.75, Utilization_YTD__c   &lt;  0.85), 3,
IF(AND(Job_Title_Static__c = &quot;Senior Director&quot;,  Utilization_YTD__c  &gt;= 0.65, Utilization_YTD__c   &lt;  0.75), 2,
IF(AND(Job_Title_Static__c = &quot;Senior Director&quot;, Utilization_YTD__c   &lt;  0.65), 1, 0.00)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SD Utilization Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>