force-app/main/default/objects/Year_end_Review__c/fields/Self_Evaluation_Comment_2_AO__c.field-meta.xml
<CustomField>
    <fullName>Self_Evaluation_Comment_2_AO__c</fullName>
    <label>Self Evaluation Comment 2</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>