force-app/main/default/objects/Year_end_Review__c/fields/Self_evaluation_Rating_AO__c.field-meta.xml
<CustomField>
    <fullName>Self_evaluation_Rating_AO__c</fullName>
    <inlineHelpText>5 - Significantly Exceeds Expectations       
4 - Exceeds Expectations
3 - Meets Expectations
2 - Meets Some Expectations
1 - Not Meeting Expectations</inlineHelpText>
    <label>Self Evaluation Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>