force-app/main/default/objects/Year_end_Review__c/fields/Self_Final_Rating__c.field-meta.xml
<CustomField>
    <fullName>Self_Final_Rating__c</fullName>
    <label>Self Final Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>