force-app/main/default/objects/Year_end_Review__c/fields/Self_Rating_Value_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Self_Rating_Value_Weighted__c</fullName>
    <formula>IF(Override__c = TRUE,  Self_Final_Rating__c  ,

IF(Job_Title_Static__c = &quot;Business Analyst&quot;,(AO_Self_Evaluation_Value__c * 0.55)+(BC_Self_Evaluation_Value__c * 0.10)+(DC_Self_Evaluation_Value__c * 0.15)+( Utilization_Rating__c * 0.20), 

IF(OR(Job_Title_Static__c = &quot;Associate Consultant&quot;, Job_Title_Static__c = &quot;Associate Director&quot;, Job_Title_Static__c = &quot;Director&quot;), (AO_Self_Evaluation_Value__c * 0.45)+(BC_Self_Evaluation_Value__c * 0.10)+ (DC_Self_Evaluation_Value__c * 0.15)+(Utilization_Rating__c * 0.30), 

IF(SD_VP_STATIC__c  = TRUE, (AO_Self_Evaluation_Value__c * 0.50) + (BC_Self_Evaluation_Value__c * 0.15) + (DC_Self_Evaluation_Value__c * 0.15) + (Utilization_Rating__c * 0.20), 0.00))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Rating: SELF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>