force-app/main/default/objects/Year_end_Review__c/fields/SJ_Final__c.field-meta.xml
<CustomField>
    <fullName>SJ_Final__c</fullName>
    <formula>IF(CreatedById = &quot;0052A000009xlB6&quot;, (0.45*AO_Managing_Director_Value__c)+(0.25*BC_Managing_Director_Value__c)+(0.15*DC_Managing_Director_Value__c) + (0.15* Utilization_Rating__c), 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SJ Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>