force-app/main/default/objects/Year_end_Review__c/fields/Utilization_Rating__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Rating__c</fullName>
    <label>UTE Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>