force-app/main/default/objects/Year_end_Review__c/fields/Utilization_Target__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Target__c</fullName>
    <formula>IF(OR( CreatedById = &quot;0052A000009xinW&quot;, CreatedById = &quot;005F0000007fFMD&quot; ) , 0.5 , 
IF(Job_Title__c = &quot;Business Analyst&quot;, 0.8, 
IF(Job_Title__c = &quot;Associate Consultant&quot;, 0.8, 
IF(Job_Title__c = &quot;Associate Director&quot;, 0.8, 
IF(Job_Title__c = &quot;Director&quot; , 0.8 , 
IF(Job_Title__c = &quot;Senior Director&quot; , 0.8, 
IF(Job_Title__c = &quot;Vice President&quot; , 0.70, 0.00)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTE Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>