force-app/main/default/objects/Year_end_Review__c/fields/Utilization_YTD__c.field-meta.xml
<CustomField>
    <fullName>Utilization_YTD__c</fullName>
    <label>UTE Actual</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>