force-app/main/default/objects/Year_end_Review__c/fields/VP_Self__c.field-meta.xml
<CustomField>
    <fullName>VP_Self__c</fullName>
    <formula>IF(AND(CreatedById &lt;&gt; &quot;0052A000009xlB6&quot;, CreatedById &lt;&gt; &quot;0052A000009xinW&quot;, CreatedById &lt;&gt; &quot;005F0000002H4MV&quot;, CreatedById &lt;&gt; &quot;0052A000009LBSN&quot;, Job_Title_Static__c = &quot;Vice President&quot;), (0.5*AO_Self_Evaluation_Value__c) + (0.15*BC_Self_Evaluation_Value__c) + (0.15*DC_Self_Evaluation_Value__c) + (0.2*Utilization_Rating__c), 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VP Self</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>