force-app/main/default/objects/Year_end_Review__c/fields/VP_Utilization_Rating_PDO__c.field-meta.xml
<CustomField>
    <fullName>VP_Utilization_Rating_PDO__c</fullName>
    <formula>0.00</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VP Utilization Rating - PDO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>