force-app/main/default/objects/Year_end_Review__c/recordTypes/G100C.recordType-meta.xml
<RecordType>
    <fullName>G100C</fullName>
    <active>true</active>
    <label>G100C</label>
</RecordType>