force-app/main/default/objects/Year_end_Review__c/recordTypes/SSA.recordType-meta.xml
<RecordType>
    <fullName>SSA</fullName>
    <active>true</active>
    <description>SSA Default</description>
    <label>SSA</label>
</RecordType>