force-app/main/default/objects/Year_end_Review__c/recordTypes/SSA_4_Level.recordType-meta.xml
<RecordType>
    <fullName>SSA_4_Level</fullName>
    <active>true</active>
    <description>Used for 4 level hierarchy</description>
    <label>SSA 4 Level</label>
</RecordType>