force-app/main/default/objects/Year_end_Review__c/recordTypes/SSA_PL.recordType-meta.xml
<RecordType>
    <fullName>SSA_PL</fullName>
    <active>true</active>
    <label>SSA PL</label>
</RecordType>