force-app/main/default/objects/Year_end_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Evaluation_year__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Job_Title_Static__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Year-End Reviews</label>
</ListView>